--- a/css/style.css
+++ b/css/style.css
@@ -22,7 +22,8 @@ a {
   text-decoration: none;
 }
 
-h1, h2 {
+h1,
+h2 {
   font-weight: 300;
   line-height: 1.2;
 }
@@ -33,7 +34,6 @@ p {
 
 img {
   width: 100%;
-  
 }
 
 /* Navbar */
@@ -60,7 +60,7 @@ img {
 .navbar a {
   color: #fff;
   padding: 10px 20px;
-  margin: 0 5px
+  margin: 0 5px;
 }
 
 .navbar a:hover {
@@ -84,7 +84,6 @@ img {
   color: #fff;
 }
 
-
 .hero .content {
   display: flex;
   flex-direction: column;
@@ -97,7 +96,6 @@ img {
 
 .hero .content h1 {
   font-size: 55px;
-
 }
 
 .hero .content p {
@@ -113,10 +111,10 @@ img {
   left: 0;
   width: 100%;
   height: 100%;
-  background: rgb(0,0,0,0.6);
+  background: rgb(0, 0, 0, 0.6);
 }
 
-.hero *  {
+.hero * {
   z-index: 10;
 }
 
@@ -217,7 +215,6 @@ img {
   justify-content: center;
   text-align: center;
   height: 200px;
-
 }
 
 .footer a {
@@ -230,17 +227,14 @@ img {
 
 .footer .social > * {
   margin-right: 30px;
-
 }
 
-
 /* Mobile */
-@media(max-width: 768px) {
+@media (max-width: 768px) {
   .navbar {
     flex-direction: column;
     height: 120px;
     padding: 20px;
-
   }
 
   .navbar a {
@@ -252,12 +246,12 @@ img {
     flex-direction: column;
   }
 
-  .flex-columns .column, .flex-grid .column {
+  .flex-columns .column,
+  .flex-grid .column {
     flex: 100%;
     max-width: 100%;
   }
-.team img {
-  width: 70%;
-}
-
+  .team img {
+    width: 70%;
+  }
 }
