--- a/css/utilities.css
+++ b/css/utilities.css
@@ -24,19 +24,23 @@
   opacity: 0.9;
 }
 
-.btn-primary, .bg-primary {
+.btn-primary,
+.bg-primary {
   background: #28a745;
   color: #fff;
 }
-.btn-secondary, .bg-secondary {
+.btn-secondary,
+.bg-secondary {
   background: #0284d0;
   color: #fff;
 }
-.btn-dark, .bg-dark {
+.btn-dark,
+.bg-dark {
   background: #333;
   color: #fff;
 }
-.btn-light, .bg-light {
+.btn-light,
+.bg-light {
   background: #f4f4f4;
   color: #333;
 }
@@ -63,7 +67,7 @@
 
 /* Flex Columns */
 
-.flex-columns.flex-reverse .row{
+.flex-columns.flex-reverse .row {
   flex-direction: row-reverse;
 }
 
